[tool.poetry]
name = "chronofy"
version = "0.1.7"
description = "Temporal validity framework for time-aware AI systems. Implements the Temporal-Logical Decay Architecture (TLDA) for retrieval-augmented generation."
authors = ["Muntaser Syed"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jemsbhai/chronofy"
repository = "https://github.com/jemsbhai/chronofy"
keywords = ["temporal-reasoning", "information-decay", "RAG", "knowledge-graphs", "signal-temporal-logic", "neuro-symbolic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "chronofy"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"

[tool.poetry.group.graph.dependencies]
networkx = {version = "^3.2", optional = true}

[tool.poetry.group.ml.dependencies]
torch = {version = "^2.0", optional = true}
sentence-transformers = {version = "^3.0", optional = true}

[tool.poetry.extras]
graph = ["networkx"]
ml = ["torch", "sentence-transformers"]
all = ["networkx", "torch", "sentence-transformers"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
